--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -103,7 +103,7 @@
 	.main-navigation {
 		max-width: 40%;
 		float: left;
-		margin-left: 10%;
+		// margin-left: 10%;
 		margin-top: -10px;
 		button, input[type="button"], input[type="reset"], input[type="submit"] {
 		  border: none;
