--- a/sass/variables-site/_structure.scss
+++ b/sass/variables-site/_structure.scss
@@ -48,6 +48,9 @@ html, body, .main-content-area, .full, .site-main {height: 100%;}
 	min-width: 350px;
 	float: left;
 	overflow: hidden;
+		@media (max-width: 770px) {
+			min-width: 225px;
+		}
 }
 .nav-social {
 	display: inline;
@@ -153,6 +156,7 @@ Home Page Hero Section
 	-webkit-animation-delay: 0.5s;
 	animation-duration: 2s;
 	-webkit-animation-duration: 2s;
+	margin: 0 auto;
 	h2, h3, h4 {
 		margin: 0;
 		padding: 0;
@@ -165,14 +169,32 @@ Home Page Hero Section
 		font-size: 6em;
 		padding-bottom: 10px;
 		padding-top: 100px;
+		@media (max-width: 770px) {
+			font-size: 5em;
+		}
+		@media (max-width: 610px) {
+			font-size: 3em;
+		}
 	}
 	h3 {
 		font-size: 2.5em;
 		padding-bottom: 20px;
+		@media (max-width: 770px) {
+			font-size: 1.5em;
+		}
+		@media (max-width: 610px) {
+			font-size: 1em;
+		}
 	}
 	h4 {
 		font-size: 1.5em;
 		padding-bottom: 20px;
+		@media (max-width: 770px) {
+			font-size: 1em;
+		}
+		@media (max-width: 610px) {
+			font-size: .75em;
+		}
 	}
 }
 /**************************
@@ -207,11 +229,11 @@ Home Page Intro Section
 **************************/
 #intro {
 	width: 100%;
-	height: 95%;
-	background: url(http://assets.imperomedia.com/images/hipster_desk1.jpg) center center;
+	height: 100%;
+	// background: url(http://assets.imperomedia.com/video/im-hero-code/im-hero-code.jpg) center center;
 	background-size: cover;
 	top: 0;
-	position: relative;
+	// position: relative;
 	z-index: 1;
 	padding-top: 75px;
 	border-bottom: 2px solid $faded_red;
@@ -223,10 +245,10 @@ Home Page Intro Section
 		bottom: 0;
 		left: 0;
 		background-image: radial-gradient(circle at top, $white 5%, $dark 30%, $dark_red);
-		opacity: .6; 
+		opacity: .3; 
   }
 	.container {
-		margin: 3em auto;
+		margin: 10em auto;
 		max-width: 1170px;
 	}
 }
@@ -271,7 +293,12 @@ Home Page Work/Portfolio Section
 		margin: 0;
 	}
 	h2 {margin-top: -15px;}
-	h3 {font-size: 2em; font-weight: 600;}
+	h3 {
+		font-size: 2em;
+		font-weight: 600;
+		color: $red;
+		background-color: $faded_white;
+	}
 }
 /**************************
 Home Page Services Section
@@ -368,3 +395,22 @@ Services Pages
 	min-height: 100px;
 	line-height: 100px;
 }
+/**************************
+Home Video
+**************************/
+video#bgvid {
+position: fixed;
+top: 50%;
+left: 50%;
+min-width: 100%;
+min-height: 100%;
+width: auto;
+height: auto;
+z-index: -100;
+-webkit-transform: translateX(-50%) translateY(-50%);
+transform: translateX(-50%) translateY(-50%);
+background: url(polina.jpg) no-repeat;
+background-size: cover;
+}
+/*MISC*/
+a#scroll-to-top {border-bottom: 1px solid $white;}
