--- a/style.css
+++ b/style.css
@@ -92,6 +92,9 @@ html, body, .main-content-area, .full, .site-main {
   min-width: 350px;
   float: left;
   overflow: hidden; }
+  @media (max-width: 770px) {
+    .site-branding {
+      min-width: 225px; } }
 
 .nav-social {
   display: inline;
@@ -182,7 +185,8 @@ Home Page Hero Section
   animation-delay: 0.5s;
   -webkit-animation-delay: 0.5s;
   animation-duration: 2s;
-  -webkit-animation-duration: 2s; }
+  -webkit-animation-duration: 2s;
+  margin: 0 auto; }
   .hero_content h2, .hero_content h3, .hero_content h4, .intro_headline h2, .intro_headline h3, .intro_headline h4, .intro_content h2, .intro_content h3, .intro_content h4 {
     margin: 0;
     padding: 0;
@@ -194,12 +198,30 @@ Home Page Hero Section
     font-size: 6em;
     padding-bottom: 10px;
     padding-top: 100px; }
+    @media (max-width: 770px) {
+      .hero_content h2, .intro_headline h2, .intro_content h2 {
+        font-size: 5em; } }
+    @media (max-width: 610px) {
+      .hero_content h2, .intro_headline h2, .intro_content h2 {
+        font-size: 3em; } }
   .hero_content h3, .intro_headline h3, .intro_content h3 {
     font-size: 2.5em;
     padding-bottom: 20px; }
+    @media (max-width: 770px) {
+      .hero_content h3, .intro_headline h3, .intro_content h3 {
+        font-size: 1.5em; } }
+    @media (max-width: 610px) {
+      .hero_content h3, .intro_headline h3, .intro_content h3 {
+        font-size: 1em; } }
   .hero_content h4, .intro_headline h4, .intro_content h4 {
     font-size: 1.5em;
     padding-bottom: 20px; }
+    @media (max-width: 770px) {
+      .hero_content h4, .intro_headline h4, .intro_content h4 {
+        font-size: 1em; } }
+    @media (max-width: 610px) {
+      .hero_content h4, .intro_headline h4, .intro_content h4 {
+        font-size: .75em; } }
 
 /**************************
 Home Page Universal
@@ -234,11 +256,9 @@ Home Page Intro Section
 **************************/
 #intro {
   width: 100%;
-  height: 95%;
-  background: url(http://assets.imperomedia.com/images/hipster_desk1.jpg) center center;
+  height: 100%;
   background-size: cover;
   top: 0;
-  position: relative;
   z-index: 1;
   padding-top: 75px;
   border-bottom: 2px solid rgba(191, 30, 46, 0.6); }
@@ -251,9 +271,9 @@ Home Page Intro Section
     left: 0;
     background-image: -webkit-radial-gradient(circle at top, #efefef 5%, #3a3a3c 30%, #671019);
     background-image: radial-gradient(circle at top, #efefef 5%, #3a3a3c 30%, #671019);
-    opacity: .6; }
+    opacity: .3; }
   #intro .container {
-    margin: 3em auto;
+    margin: 10em auto;
     max-width: 1170px; }
 
 /**************************
@@ -296,7 +316,9 @@ Home Page Work/Portfolio Section
     margin-top: -15px; }
   #work h3 {
     font-size: 2em;
-    font-weight: 600; }
+    font-weight: 600;
+    color: #bf1e2e;
+    background-color: rgba(239, 239, 239, 0.9); }
 
 /**************************
 Home Page Services Section
@@ -372,6 +394,28 @@ Services Pages
   background: #671019;
   min-height: 100px;
   line-height: 100px; }
+
+/**************************
+Home Video
+**************************/
+video#bgvid {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -ms-transform: translateX(-50%) translateY(-50%);
+      transform: translateX(-50%) translateY(-50%);
+  background: url(polina.jpg) no-repeat;
+  background-size: cover; }
+
+/*MISC*/
+a#scroll-to-top {
+  border-bottom: 1px solid #efefef; }
 
 html {
   box-sizing: border-box; }
@@ -636,8 +680,11 @@ big {
   font-family: "Gotham Narrow SSm A", "Gotham Narrow SSm B";
   text-decoration: none;
   float: left;
-  padding-left: 100px;
+  padding-left: 50px;
   font-weight: 300; }
+  @media (max-width: 770px) {
+    .site-branding h2 a {
+      font-size: 1em; } }
 
 .f-nav h2 a {
   color: #bf1e2e;
@@ -708,9 +755,9 @@ big {
   transition: all 0.5s ease-in-out; }
 
 .view-tenth:hover > img {
-  -webkit-transform: scale(1.25) rotate(2deg);
-  -ms-transform: scale(1.25) rotate(2deg);
-  transform: scale(1.25) rotate(2deg);
+  -webkit-transform: scale(1.125) rotate(1.6deg);
+  -ms-transform: scale(1.125) rotate(1.6deg);
+  transform: scale(1.125) rotate(1.6deg);
   -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=30)";
   filter: alpha(opacity=30);
   opacity: 0.3; }
@@ -747,7 +794,7 @@ big {
 .view a.info {
   font-size: 20px;
   color: #efefef;
-  background: #607d8b;
+  background: #bf1e2e;
   border: 1px solid #fff;
   padding: 7px 14px;
   text-decoration: none;
@@ -757,9 +804,9 @@ big {
   text-transform: uppercase; }
 
 .view a.info:hover {
-  background: #36474f;
-  color: #efefef;
-  border: 1px solid #fff; }
+  background: #efefef;
+  color: #bf1e2e;
+  border: 1px solid #bf1e2e; }
 
 .view-tenth a.info {
   -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
@@ -1777,6 +1824,7 @@ input[type="submit"]:active {
   -webkit-transition: all 0.3s ease 0s;
   width: 16.795%;
   /* auto */
+  min-width: 120px;
   text-align: center;
   /* DELETE WHEN WIDTH AUTO */ }
   .btn.red {
@@ -1957,7 +2005,6 @@ a {
   .main-navigation {
     max-width: 40%;
     float: left;
-    margin-left: 10%;
     margin-top: -10px; }
     .main-navigation button, .main-navigation input[type="button"], .main-navigation input[type="reset"], .main-navigation input[type="submit"] {
       border: none;
