Added Portfolio and Media Queries
Added portfolio template and template part. Added MQ .scss file.
Various style changes.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,8 +42,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 	12.1 Captions
 	12.2 Galleries
 --------------------------------------------------------------*/
-@import "variables-site/variables-site";
 @import "mixins/mixins-master";
+@import "variables-site/variables-site";
 @import "bourbon", "neat";
 
 /*--------------------------------------------------------------
@@ -62,6 +62,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "elements/elements";
 @import "bootstrap";
 @import "sections/cases";
+@import "mixins/media-queries";
 
 /*--------------------------------------------------------------
 4.0 Forms
