--- a/sass/elements/_portfolio.scss
+++ b/sass/elements/_portfolio.scss
@@ -66,7 +66,7 @@
 }
 .view h3 {
 	text-transform: uppercase;
-	color: $red;
+	color: $dark_red;
 	font-weight: 600;
 	font-family: $proxima;
 	text-align: center;
@@ -78,7 +78,7 @@
 	text-shadow: none;
 }
 .view-tenth h3 {
-	color: $red;
+	color: $dark_red;
 	font-weight: 600;
 	font-family: $proxima;
 	margin: 10px 40px 0;
@@ -101,7 +101,7 @@
 .view a.info {
 	font-size: 20px;
 	color: $white;
-	background: $red;
+	background: $dark_red;
 	border: 1px solid #fff;
 	padding: 7px 14px;
 	text-decoration: none;
@@ -112,8 +112,8 @@
 }
 .view a.info:hover {
 	background: $white;
-	color: $red;
-	border: 1px solid $red;
+	color: $dark_red;
+	border: 1px solid $dark_red;
 }
 .view-tenth a.info {
 	-ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
