--- a/sass/mixins/_mixins-master.scss
+++ b/sass/mixins/_mixins-master.scss
@@ -29,3 +29,12 @@
       -ms-border-radius: $radius;
           border-radius: $radius;
 }
+
+//Transition Mixin use "@include transition();"
+@mixin transition ($args...) {
+ -webkit-transition: $args;
+  -moz-transition: $args;
+  -ms-transition: $args;
+  -o-transition: $args;
+  transition: $args;
+}
