--- a/style.css
+++ b/style.css
@@ -76,7 +76,8 @@ html, body, .main-content-area, .full, .site-main {
   z-index: 2;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  clear: both; }
 
 .f-nav {
   background: rgba(239, 239, 239, 0.9);
@@ -92,7 +93,7 @@ html, body, .main-content-area, .full, .site-main {
   min-width: 350px;
   float: left;
   overflow: hidden; }
-  @media (max-width: 770px) {
+  @media (max-width: 767px) {
     .site-branding {
       min-width: 225px; } }
 
@@ -117,7 +118,7 @@ html, body, .main-content-area, .full, .site-main {
     .nav-social ul li a:hover {
       color: #671019;
       background: #efefef; }
-  @media (max-width: 1175px) {
+  @media (max-width: 1023px) {
     .nav-social {
       display: none; } }
 
@@ -198,28 +199,28 @@ Home Page Hero Section
     font-size: 6em;
     padding-bottom: 10px;
     padding-top: 100px; }
-    @media (max-width: 770px) {
+    @media (max-width: 767px) {
       .hero_content h2, .intro_headline h2, .intro_content h2 {
         font-size: 5em; } }
-    @media (max-width: 610px) {
+    @media (max-width: 479px) {
       .hero_content h2, .intro_headline h2, .intro_content h2 {
         font-size: 3em; } }
   .hero_content h3, .intro_headline h3, .intro_content h3 {
     font-size: 2.5em;
     padding-bottom: 20px; }
-    @media (max-width: 770px) {
+    @media (max-width: 767px) {
       .hero_content h3, .intro_headline h3, .intro_content h3 {
         font-size: 1.5em; } }
-    @media (max-width: 610px) {
+    @media (max-width: 479px) {
       .hero_content h3, .intro_headline h3, .intro_content h3 {
         font-size: 1em; } }
   .hero_content h4, .intro_headline h4, .intro_content h4 {
     font-size: 1.5em;
     padding-bottom: 20px; }
-    @media (max-width: 770px) {
+    @media (max-width: 767px) {
       .hero_content h4, .intro_headline h4, .intro_content h4 {
         font-size: 1em; } }
-    @media (max-width: 610px) {
+    @media (max-width: 479px) {
       .hero_content h4, .intro_headline h4, .intro_content h4 {
         font-size: .75em; } }
 
@@ -396,6 +397,18 @@ Services Pages
   background: #671019;
   min-height: 100px;
   line-height: 100px; }
+
+/**************************
+Projects/Portfolio
+**************************/
+#project .project_meta h3 {
+  font-size: 1em; }
+#project .project_meta_title {
+  font-weight: 600;
+  text-transform: uppercase; }
+#project .project_meta_field {
+  font-weight: 300;
+  font-family: "Sentinel SSm A", "Sentinel SSm B"; }
 
 /**************************
 Home Video
