Test Slack Sync
Disregard

--- a/sass/elements/_portfolio.scss
+++ b/sass/elements/_portfolio.scss
@@ -99,7 +99,7 @@
 .view a.info {
 	font-size: 20px;
 	color: $white;
-	font-family: $knockout;
+	font-family: $gotham;
 	background: $dark_red;
 	border: 1px solid #fff;
 	padding: 7px 14px;
