--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -17,7 +17,8 @@ textarea {
 	h1 {
 		font-family: $gotham;
 		text-transform: uppercase;
-		font-size: 2.5rem;
+		font-size: 2.25rem;
+		margin: 0;
 	}
 }
 .site-branding h2 a {
