--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ Home Page Intro Section
 **************************/
 #intro {
   width: 100%;
-  height: 100%;
+  height: 97%;
   background-size: cover;
   top: 0;
   z-index: 1;
@@ -272,7 +272,8 @@ Home Page Intro Section
     left: 0;
     background-image: -webkit-radial-gradient(circle at top, #efefef 5%, #3a3a3c 30%, #671019);
     background-image: radial-gradient(circle at top, #efefef 5%, #3a3a3c 30%, #671019);
-    opacity: .3; }
+    opacity: .3;
+    height: 100%; }
   #intro .container {
     margin: 10em auto;
     max-width: 1170px; }
@@ -689,7 +690,8 @@ big {
 .entry-header h1 {
   font-family: "Gotham Narrow SSm A", "Gotham Narrow SSm B";
   text-transform: uppercase;
-  font-size: 2.5rem; }
+  font-size: 2.25rem;
+  margin: 0; }
 
 .site-branding h2 a {
   color: #efefef;
@@ -810,7 +812,7 @@ big {
 .view a.info {
   font-size: 20px;
   color: #efefef;
-  font-family: "Knockout 48 A", "Knockout 48 B";
+  font-family: "Gotham Narrow SSm A", "Gotham Narrow SSm B";
   background: #671019;
   border: 1px solid #fff;
   padding: 7px 14px;
