--- a/sass/variables-site/_structure.scss
+++ b/sass/variables-site/_structure.scss
@@ -360,6 +360,7 @@ Home Page Contact Section
 	h4 { font-family: $serif;}
 	.container {
 		width: 100%;
+		max-width: 1170px;
 		.contact_left {
 			width: 60%;
 			float: left;
