--- a/sass/elements/_portfolio.scss
+++ b/sass/elements/_portfolio.scss
@@ -115,6 +115,7 @@
 	border: 1px solid $dark_red;
 }
 .view-tenth a.info {
+	display: none; /*****TO HIDE CLICK HERE BUTTON ON HOME PAGE**/
 	-ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	opacity: 0;
@@ -140,4 +141,145 @@
 	-ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
 	filter: alpha(opacity=100);
 	opacity: 1;
+}
+
+/********************
+Actual Portfolio Page
+********************/
+#portfolio {
+	margin: 0 auto;
+	width: 100%;
+	max-width: 1500px;
+}
+.portfolio-grid {
+	list-style: none;
+	padding: 0;
+	margin: 0 auto;
+	text-align: center;
+	width: 100%;
+	max-width: 1500px;
+}
+
+.portfolio-grid li {
+	display: inline-table;
+	padding: 5px 5px 5px 5px;
+	vertical-align: top;
+    width:24%;
+    min-width: 200px;
+    box-sizing: border-box;
+    margin-bottom: 50px;
+    &:hover {
+    	margin-bottom: 0;
+    }
+}
+
+.portfolio-grid li > a,
+.portfolio-grid li > a img {
+    width: 100%;
+	border: none;
+	outline: none;
+	display: block;
+	position: relative;
+    transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    @include border-radius(5px 5px 0 0);
+    &:hover {
+    	@include border-radius(5px);
+    }
+}
+
+.portfolio-grid li > a img:hover {
+    // border-radius: 10%;
+    z-index: 9999;
+    opacity: .85;
+}
+a.cat-feature {
+	display: inline-block;
+	border: 3px solid $white;
+	border-radius: 200px;
+	width: 100px;
+	height: 100px;
+	line-height: 100px;
+	font-size: 30px;
+	color: $white;
+	text-decoration: none;
+	-webkit-transition: all 500ms ease;
+	-moz-transition: all 500ms ease;
+	-ms-transition: all 500ms ease;
+	-o-transition: all 500ms ease;
+	transition: all 500ms ease;
+}
+a.cat-feature:hover {
+	// background-color: $dark_red;
+	color: $dark;
+	-webkit-transition: all 500ms ease;
+	-moz-transition: all 500ms ease;
+	-ms-transition: all 500ms ease;
+	-o-transition: all 500ms ease;
+	transition: all 500ms ease;
+}
+a.cat-feature i {
+	opacity: 1;
+	position: relative;
+	bottom: 0;
+	color: $white;
+	-webkit-transition: all 500ms ease;
+	-moz-transition: all 500ms ease;
+    -ms-transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+	transition: all 500ms ease;
+}
+a.cat-feature:hover i {
+	opacity: 0;
+	position: relative;
+	bottom: 100px;
+	color: $white;
+	-webkit-transition: all 500ms ease;
+	-moz-transition: all 500ms ease;
+	-ms-transition: all 500ms ease;
+	-o-transition: all 500ms ease;
+	transition: all 500ms ease;
+}
+.cat-feature-label {
+	position: relative;
+	bottom: 0px;
+	// opacity: 0;
+	font-size: 16px;
+	display: block;
+	// height: 100%;
+	padding: 7px 0;
+	z-index: 9999;
+	color: $dark_red;
+	-webkit-transition: all 500ms ease;
+	-moz-transition: all 500ms ease;
+	-ms-transition: all 500ms ease;
+	-o-transition: all 500ms ease;
+	transition: all 500ms ease;
+	opacity: 1;
+	line-height: 1.75;
+	background-color: #fff;
+	border-bottom: 3px solid $dark_red;
+	height: 60px;
+	font-family: $gotham;
+	@include border-radius(0 0 5px 5px);
+}	
+a.cat-feature:hover .cat-feature-label {
+	bottom: 150px;
+	opacity: 1;
+	color: $dark_red;
+	background-color: #fff;
+	display: inline-block;
+	width: 100%;
+	height: 60px;
+	padding: 7px 0;
+	z-index: 9999;
+	line-height: 1.75;
+	-webkit-transition: all 500ms ease;
+	-moz-transition: all 500ms ease;
+	-ms-transition: all 500ms ease;
+	-o-transition: all 500ms ease;
+	transition: all 500ms ease;
+	@include border-radius(0px);
 }
