--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 Theme Name: Impero Media 2015
 Theme URI: http://underscores.me/
@@ -370,7 +371,8 @@ Home Page Contact Section
   #contact h4 {
     font-family: "Sentinel SSm A", "Sentinel SSm B"; }
   #contact .container {
-    width: 100%; }
+    width: 100%;
+    max-width: 1170px; }
     #contact .container .contact_left {
       width: 60%;
       float: left;
@@ -828,6 +830,8 @@ big {
   border: 1px solid #671019; }
 
 .view-tenth a.info {
+  display: none;
+  /*****TO HIDE CLICK HERE BUTTON ON HOME PAGE**/
   -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
   opacity: 0;
@@ -846,6 +850,120 @@ big {
   -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
   filter: alpha(opacity=100);
   opacity: 1; }
+
+/********************
+Actual Portfolio Page
+********************/
+#portfolio {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1500px; }
+
+.portfolio-grid {
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+  max-width: 1500px; }
+
+.portfolio-grid li {
+  display: inline-table;
+  padding: 5px 5px 5px 5px;
+  vertical-align: top;
+  width: 24%;
+  min-width: 200px;
+  box-sizing: border-box;
+  margin-bottom: 50px; }
+  .portfolio-grid li:hover {
+    margin-bottom: 0; }
+
+.portfolio-grid li > a,
+.portfolio-grid li > a img {
+  width: 100%;
+  border: none;
+  outline: none;
+  display: block;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  border-radius: 5px 5px 0 0; }
+  .portfolio-grid li > a:hover,
+  .portfolio-grid li > a img:hover {
+    border-radius: 5px; }
+
+.portfolio-grid li > a img:hover {
+  z-index: 9999;
+  opacity: .85; }
+
+a.cat-feature {
+  display: inline-block;
+  border: 3px solid #efefef;
+  border-radius: 200px;
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  font-size: 30px;
+  color: #efefef;
+  text-decoration: none;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease; }
+
+a.cat-feature:hover {
+  color: #3a3a3c;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease; }
+
+a.cat-feature i {
+  opacity: 1;
+  position: relative;
+  bottom: 0;
+  color: #efefef;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease; }
+
+a.cat-feature:hover i {
+  opacity: 0;
+  position: relative;
+  bottom: 100px;
+  color: #efefef;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease; }
+
+.cat-feature-label {
+  position: relative;
+  bottom: 0px;
+  font-size: 14px;
+  display: block;
+  padding: 7px 0;
+  z-index: 9999;
+  color: #671019;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  opacity: 1;
+  line-height: 1.75;
+  background-color: #fff;
+  border-bottom: 3px solid #671019;
+  height: 60px;
+  font-family: "proxima-nova-condensed";
+  border-radius: 0 0 5px 5px; }
+
+a.cat-feature:hover .cat-feature-label {
+  bottom: 150px;
+  opacity: 1;
+  color: #671019;
+  background-color: #fff;
+  display: inline-block;
+  width: 100%;
+  height: 60px;
+  padding: 7px 0;
+  z-index: 9999;
+  line-height: 1.75;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  border-radius: 0px; }
 
 html {
   box-sizing: border-box; }
@@ -877,7 +995,7 @@ ul, ol {
   margin: 0 0 1.5em 3em; }
 
 ul {
-  list-style: disc; }
+  list-style: none; }
 
 ol {
   list-style: decimal; }
@@ -902,6 +1020,52 @@ img {
 table {
   margin: 0 0 1.5em;
   width: 100%; }
+
+/*Pull Quotes*/
+.pullquote-right, .pullquote-left {
+  float: right;
+  width: 200px;
+  background: url(images/openquote.gif) top left no-repeat;
+  color: #bf1e2e;
+  font-size: 26px;
+  font-style: italic;
+  padding: 13px;
+  border-left: 1px solid #bf1e2e; }
+  .pullquote-right .by, .pullquote-left .by {
+    padding: 6px;
+    font-size: 12px;
+    color: #efefef;
+    background: #bf1e2e; }
+  .pullquote-right p, .pullquote-left p {
+    line-height: 1.25;
+    margin: 20px 0; }
+  .pullquote-right blockquote, .pullquote-left blockquote {
+    margin: 0;
+    /* gets rid of the default blockquote margin */ }
+    .pullquote-right blockquote:before, .pullquote-left blockquote:before {
+      content: '’’';
+      float: left;
+      position: relative;
+      top: -115px;
+      width: 0%;
+      height: 100%;
+      pointer-events: none;
+      font-size: 8em;
+      text-align: left;
+      font-family: Arial;
+      letter-spacing: -16px;
+      font-style: normal;
+      font-weight: bold;
+      color: rgba(0, 0, 0, 0.1); }
+
+.pullquote-left {
+  float: left; }
+
+/**************
+Lightbox Plugin
+**************/
+#lightbox #playPause {
+  display: none; }
 
 .container {
   margin-right: auto;
@@ -1931,6 +2095,21 @@ button, input[type="button"], input[type="reset"], input[type="submit"] {
   button:hover, input[type="button"]:hover, input[type="reset"]:hover, input[type="submit"]:hover {
     background: #36474f;
     box-shadow: none; }
+
+/*Formidable*/
+.frm_style_formidable-style.with_frm_style select {
+  font-size: 14px;
+  height: 34px; }
+
+.frm_form_field .form-field placeholder {
+  color: #bf1e2e; }
+
+.frm_style_formidable-style.with_frm_style .frm_other_container select:not([multiple="multiple"]) {
+  width: 100%; }
+
+.frm_description {
+  color: #8a8a8a !important;
+  padding: 2px 0 0 5px !important; }
 
 /*--------------------------------------------------------------
 5.0 Navigation
