New github client commit Portfolio JS update
Sync new files that are showing as changed in new github Mac client.
Change lightbox JS in portfolio page to written & hosted, not plugin.

--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -55,7 +55,7 @@ $dark: #3a3a3c;
 $dark_dark : darken ( $dark, 20% );
 $light: #a8a9ad;
 $white: $paper;
-$dark_red: darken( $red, 20% );
+$dark_red: darken( $red, 20% ); /* #671019 */
 $dark_gun: darken( $gunMetal, 20%);
 
 $faded_red: rgba(191, 30, 46, 0.6);
