--- a/sass/elements/_portfolio.scss
+++ b/sass/elements/_portfolio.scss
@@ -3,25 +3,18 @@
 	font-size: 16px;
 	position: relative;
 	color: $dark;
-	padding: 10px 20px 10px;
+	padding: 5px 20px 5px;
 	text-align: center;
 }
 .view-tenth p {
-	color: $dark;
+	color: $white;
+	background-color: $dark_red;
 	font-family: $sentinel;
 	-ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	opacity: 0;
-	-webkit-transform: scale(0);
-	-moz-transform: scale(0);
-	-o-transform: scale(0);
-	-ms-transform: scale(0);
-	transform: scale(0);
-	-webkit-transition: all 0.5s linear;
-	-moz-transition: all 0.5s linear;
-	-o-transition: all 0.5s linear;
-	-ms-transition: all 0.5s linear;
-	transition: all 0.5s linear;
+	@include transform(scale(0));
+	@include transition(all 0.4s ease-in-out);
 }
 .view {
 	z-index: 1;
@@ -48,21 +41,13 @@
 	left: 10px;
 	margin-left: -10px;
 	position: relative;
-	-webkit-transition: all 0.5s ease-in-out;
-	-moz-transition: all 0.5s ease-in-out;
-	-o-transition: all 0.5s ease-in-out;
-	-ms-transition: all 0.5s ease-in-out;
-	transition: all 0.5s ease-in-out;
+	@include transition(all 0.4s ease-in-out);
 }
 .view-tenth:hover > img {
-	-webkit-transform: scale(1.125) rotate(1.6deg);
-	-moz-transform: scale(1.125) rotate(1.6deg);
-	-o-transform: scale(1.125) rotate(1.6deg);
-	-ms-transform: scale(1.125) rotate(1.6deg);
-	transform: scale(1.125) rotate(1.6deg);
-	-ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=30)";
-	filter: alpha(opacity=30);
-	opacity: 0.3;
+	@include transform (scale(1.11) rotate(0deg));
+	-ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=60)";
+	filter: alpha(opacity=60);
+	opacity: 0.6;
 }
 .view h3 {
 	text-transform: uppercase;
@@ -82,16 +67,8 @@
 	margin: 10px 40px 0;
 	background: transparent;
 	border-bottom: 1px solid $faded_white;
-	-webkit-transform: scale(0);
-	-moz-transform: scale(0);
-	-o-transform: scale(0);
-	-ms-transform: scale(0);
-	transform: scale(0);
-	-webkit-transition: all 0.5s linear;
-	-moz-transition: all 0.5s linear;
-	-o-transition: all 0.5s linear;
-	-ms-transition: all 0.5s linear;
-	transition: all 0.5s linear;
+	@include transform(scale(0));
+	@include transition(all 0.4s ease-in-out);
 	-ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	opacity: 0;
@@ -119,25 +96,13 @@
 	-ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	opacity: 0;
-	-webkit-transform: scale(0);
-	-moz-transform: scale(0);
-	-o-transform: scale(0);
-	-ms-transform: scale(0);
-	transform: scale(0);
-	-webkit-transition: all 0.5s linear;
-	-moz-transition: all 0.5s linear;
-	-o-transition: all 0.5s linear;
-	-ms-transition: all 0.5s linear;
-	transition: all 0.5s linear;
+	@include transform(scale(0));
+	@include transition(all 0.4s linear);
 }
 .view-tenth:hover h3,
 .view-tenth:hover p,
 .view-tenth:hover a.info {
-	-webkit-transform: scale(1);
-	-moz-transform: scale(1);
-	-o-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
+	@include transform(scale(1));
 	-ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
 	filter: alpha(opacity=100);
 	opacity: 1;
@@ -180,10 +145,7 @@ Actual Portfolio Page
 	outline: none;
 	display: block;
 	position: relative;
-    transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
+   @include transition(all 0.4s ease-in-out);
     @include border-radius(5px 5px 0 0);
     &:hover {
     	@include border-radius(5px);
@@ -205,42 +167,29 @@ a.cat-feature {
 	font-size: 30px;
 	color: $white;
 	text-decoration: none;
-	-webkit-transition: all 500ms ease;
-	-moz-transition: all 500ms ease;
-	-ms-transition: all 500ms ease;
-	-o-transition: all 500ms ease;
-	transition: all 500ms ease;
+	@include transition(all 500ms ease);
 }
 a.cat-feature:hover {
 	// background-color: $dark_red;
 	color: $dark;
-	-webkit-transition: all 500ms ease;
-	-moz-transition: all 500ms ease;
-	-ms-transition: all 500ms ease;
-	-o-transition: all 500ms ease;
-	transition: all 500ms ease;
+	@include transition(all 500ms ease);
+
 }
 a.cat-feature i {
 	opacity: 1;
 	position: relative;
 	bottom: 0;
 	color: $white;
-	-webkit-transition: all 500ms ease;
-	-moz-transition: all 500ms ease;
-    -ms-transition: all 500ms ease;
-    -o-transition: all 500ms ease;
-	transition: all 500ms ease;
+	@include transition(all 500ms ease);
+
 }
 a.cat-feature:hover i {
 	opacity: 0;
 	position: relative;
 	bottom: 100px;
 	color: $white;
-	-webkit-transition: all 500ms ease;
-	-moz-transition: all 500ms ease;
-	-ms-transition: all 500ms ease;
-	-o-transition: all 500ms ease;
-	transition: all 500ms ease;
+	@include transition(all 500ms ease);
+
 }
 .cat-feature-label {
 	position: relative;
@@ -252,11 +201,7 @@ a.cat-feature:hover i {
 	padding: 7px 0;
 	z-index: 9999;
 	color: $dark_red;
-	-webkit-transition: all 500ms ease;
-	-moz-transition: all 500ms ease;
-	-ms-transition: all 500ms ease;
-	-o-transition: all 500ms ease;
-	transition: all 500ms ease;
+	@include transition(all 500ms ease);
 	opacity: 1;
 	line-height: 1.75;
 	background-color: #fff;
@@ -276,10 +221,6 @@ a.cat-feature:hover .cat-feature-label {
 	padding: 7px 0;
 	z-index: 9999;
 	line-height: 1.75;
-	-webkit-transition: all 500ms ease;
-	-moz-transition: all 500ms ease;
-	-ms-transition: all 500ms ease;
-	-o-transition: all 500ms ease;
-	transition: all 500ms ease;
+	@include transition(all 500ms ease);
 	@include border-radius(0px);
 }
