--- a/sass/mixins/_mixins-master.scss
+++ b/sass/mixins/_mixins-master.scss
@@ -38,3 +38,12 @@
   -o-transition: $args;
   transition: $args;
 }
+
+//Transform Mixin use "@include transition();"
+@mixin transform ($args...) {
+ -webkit-transform: $args;
+  -moz-transform: $args;
+  -ms-transform: $args;
+  -o-transform: $args;
+  transform: $args;
+}
